# ThreadCPP

./: CMakeLists.txt  README.md
include/: cppthread.h  demothread.h  safequeue.h
src/: demothread.cpp  main.cpp  safequeue.cpp
